--- a/website/index.html
+++ b/website/index.html
@@ -1,10 +1,9 @@
-<!DOCTYPE html>
+<!doctype html>
 <html>
-<body>
-
-<h1>it works! Udagram, Udacity</h1>
-
-<p>It may not look like much but this service is in fact better than instagram.</p>
-
-</body>
+  <head>
+    <title>Static HTML Site</title>
+  </head>
+  <body>
+    <p>This is the first paragraph in a simple Static HTML site. There is no <strong>CSS</strong> or <strong>JavaScript</strong>.</p>
+  </body>
 </html>
